--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,23 @@
+#root {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  right: 0px;
+  position: absolute;
+}
+
 .main {
-  margin-top: 20px;
   width: 45%;
-  height: 40%;
+  height: 80%;
+  margin-top: 100px;
   margin-left: 10%;
+}
+
+.cart {
+  height: 80%;
+  width: 20%;
+  margin-top: 100px;
+  margin-right: 10%;
+  margin-left: 100px;
 }
